NetBSD Problem Report #49859

From www@NetBSD.org  Sat Apr 25 22:36:03 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C5EFFA57FD
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 25 Apr 2015 22:36:02 +0000 (UTC)
Message-Id: <20150425223601.7C5DDA6551@mollari.NetBSD.org>
Date: Sat, 25 Apr 2015 22:36:01 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: Invalid path to amd64nbsd-tdep.c in a comment
X-Send-Pr-Version: www-1.0

>Number:         49859
>Category:       kern
>Synopsis:       Invalid path to amd64nbsd-tdep.c in a comment
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 25 22:40:00 +0000 2015
>Closed-Date:    Sun Apr 26 18:49:58 +0000 2015
>Last-Modified:  Sun Apr 26 18:50:00 +0000 2015
>Originator:     Kamil Rytarowski
>Release:        current
>Organization:
>Environment:
N/A
>Description:
src/sys/arch/amd64/include/frame_regs.h mentions invalid (old) patch to amd64nbsd-tdep.c
>How-To-Repeat:
N/A
>Fix:
Index: sys/arch/amd64/include/frame_regs.h
===================================================================
RCS file: /public/netbsd-rsync/src/sys/arch/amd64/include/frame_regs.h,v
retrieving revision 1.5
diff -u -r1.5 frame_regs.h
--- sys/arch/amd64/include/frame_regs.h 27 Nov 2014 04:41:55 -0000      1.5
+++ sys/arch/amd64/include/frame_regs.h 25 Apr 2015 22:22:21 -0000
@@ -11,8 +11,8 @@
  * has been changed to improve syscall efficiency.
  *
  * Notes:
- * 1) gdb (src/gnu/dist/gdb6/gdb/amd64nbsd-tdep.c) has a lookup table that
- *    assumes the __greg_t ordering.
+ * 1) gdb (src/external/gpl3/gdb/dist/gdb/amd64nbsd-tdep.c) has a lookup table
+ *    that assumes the __greg_t ordering.
  * 2) src/lib/libc/arch/x86_64/gen/makecontext.c assumes that the first
  *    6 entries in the __greg_t array match the registers used to pass
  *    function arguments.

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: kern/49859: Invalid path to amd64nbsd-tdep.c in a comment
Date: Sun, 26 Apr 2015 09:14:09 +1000

 i think just saying "gdb/amd64nbsd-tdep.c" is better for any
 future moves :)

From: "Kamil Rytarowski" <n54@gmx.com>
To: gnats-bugs@NetBSD.org
Cc: mrg@eterna.com.au
Subject: Re: re: kern/49859: Invalid path to amd64nbsd-tdep.c in a comment
Date: Sun, 26 Apr 2015 01:20:35 +0200

 matthew green wrote:
 >  i think just saying "gdb/amd64nbsd-tdep.c" is better for any
 >  future moves :)

 I'm OK with gdb/amd64nbsd-tdep.c.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49859 CVS commit: src/sys/arch/amd64/include
Date: Sun, 26 Apr 2015 08:44:08 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sun Apr 26 12:44:08 UTC 2015

 Modified Files:
 	src/sys/arch/amd64/include: frame_regs.h

 Log Message:
 PR/49859: Kamil Rytarowski: Invalid path to amd64nbsd-tdep.c in a comment


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/sys/arch/amd64/include/frame_regs.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sun, 26 Apr 2015 18:49:58 +0000
State-Changed-Why:
done.


From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49859 CVS commit: src/sys/arch/amd64/include
Date: Sun, 26 Apr 2015 18:49:39 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Sun Apr 26 18:49:39 UTC 2015

 Modified Files:
 	src/sys/arch/amd64/include: frame_regs.h

 Log Message:
 remove any pathname for gdb's amd64nbsd-tdep.c, so it doesn't really
 matter where it lives.  PR#49859.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/amd64/include/frame_regs.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.