remove any pathname for gdb's amd64nbsd-tdep.c, so it doesn't really matter where it lives.  PR#49859.